--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">FlickPedia</string>
+
+    <!-- Search hint -->
+    <string name="search_hint">Search for a Movie</string>
 </resources>
